build/log/idf_py_stderr_output_14074
Command: make -j 14 all
In file included from /home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/main.c:26:
/home/umesh_adwait/esp-idf/components/spi_flash/include/esp_spi_flash.h:6:2: warning: #warning esp_spi_flash.h is deprecated, please use spi_flash_mmap.h instead [-Wcpp]
    6 | #warning esp_spi_flash.h is deprecated, please use spi_flash_mmap.h instead
      |  ^~~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/process.c:15:18: error: conflicting types for 'confidence'; have 'int16_t' {aka 'volatile short int'}
   15 | volatile int16_t confidence = 0;
      |                  ^~~~~~~~~~
In file included from /home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/process.c:2:
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/process.h:21:26: note: previous declaration of 'confidence' with type 'uint32_t' {aka 'volatile long unsigned int'}
   21 | extern volatile uint32_t confidence;
      |                          ^~~~~~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/process.c:16:16: error: conflicting types for 'hr_values'; have 'float'
   16 | volatile float hr_values = 0.0f;
      |                ^~~~~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/process.h:20:26: note: previous declaration of 'hr_values' with type 'uint32_t' {aka 'volatile long unsigned int'}
   20 | extern volatile uint32_t hr_values;
      |                          ^~~~~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/process.c: In function 'dsp_process':
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/process.c:125:5: error: 'spo2_val' undeclared (first use in this function)
  125 |     spo2_val = (uint32_t)confidence;
      |     ^~~~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/process.c:125:5: note: each undeclared identifier is reported only once for each function it appears in
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/process.c:128:9: error: 'ppg_val' undeclared (first use in this function)
  128 |         ppg_val= 0;
      |         ^~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:180: esp-idf/main/CMakeFiles/__idf_main.dir/process.c.obj] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/Makefile2:6398: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:130: all] Error 2
